# xxhr

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakeLists.txt.tpl  Doxyfile  INSTALL.md  LICENSE  LICENSE.md  README.md  TODO.md  index.html  main.cpp  main_syncapi.cpp  typical_tlsv1.2_open_GET_close.pcapng
.github/workflows/: ci.yml
.nxxm/: deps  opts.windows  opts.windows-cxx17
.tipi/: deps  id  opts  opts.wasm-cxx17
doc/: INDEX.md  tutorial_test.md
doc/doxygen/: .gitignore  .header.html.swp  doxygen.css  footer.html  header.html  layout.xml
docs/: INDEX.md  README.md
examples/: CMakeLists.txt  authentication.cpp  follow_redirection.cpp  getting_started.cpp  headers.cpp  introductory.cpp  introductory.hpp  main_ssl.cpp  main_syncapi.cpp  multipart.cpp  non_asio_bearssl_client.cpp  parameters.cpp  proxy.cpp  retrying.cpp  sync.cpp
examples/test/multipart/: upload.php
examples/xxhr/asio/ssl/: context.hpp  context_base.hpp  stream_bearssl.hpp  verify_mode.hpp
examples/xxhr/asio/ssl/detail/: bearssl_types.hpp  buffered_handshake_op.hpp  engine.hpp  engine.ipp  handshake_op.hpp  io.hpp  read_op.hpp  shutdown_op.hpp  stream_core.hpp  write_op.hpp
examples/xxhr/asio/ssl/detail/impl/: engine.ipp
examples/xxhr/asio/ssl/impl/: context.hpp  context.ipp
html/: annotated.html  api_8hpp_source.html  auth_8hpp_source.html  authentication-cpp.html  body_8hpp_source.html  classes.html  classxxhr_1_1Authentication-members.html  classxxhr_1_1Authentication.html  classxxhr_1_1Digest-members.html  classxxhr_1_1Digest.html  classxxhr_1_1Error-members.html  classxxhr_1_1Error.html  classxxhr_1_1MaxRedirects-members.html  classxxhr_1_1MaxRedirects.html  classxxhr_1_1Multipart-members.html  classxxhr_1_1Multipart.html  classxxhr_1_1Parameters-members.html  classxxhr_1_1Parameters.html  classxxhr_1_1Response-members.html  classxxhr_1_1Response.html  classxxhr_1_1Timeout-members.html  classxxhr_1_1Timeout.html  cookies_8hpp_source.html  custom-search.js  digest_8hpp_source.html  dir_2733bdd1c91f37e29aaba681c62fd0ec.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  error_8hpp_source.html  files.html  functions.html  functions_func.html  functions_vars.html  getting-started-cpp.html  handler_8hpp_source.html  hierarchy.html  index.html  max__redirects_8hpp_source.html  md_LICENSE.html  multipart-cpp.html  multipart_8hpp_source.html  (+29 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_3.js  all_4.js  all_6.js  all_7.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  namespaces_0.js  pages_0.js  pages_1.js  pages_3.js  pages_4.js  pages_5.js  pages_6.js  pages_7.js  (+9 more)
include/bearssl/impl/: inner.h
include/bearssl/impl/codec/: ccopy.hpp  dec16be.hpp  dec32be.hpp  dec32le.hpp  dec64be.hpp  enc16le.hpp  enc32be.hpp  enc32le.hpp  enc64be.hpp
include/bearssl/impl/ec/: ec_prime_i15.hpp  ec_prime_i31.hpp
include/bearssl/impl/hash/: multihash.hpp  sha2big.hpp
include/bearssl/impl/int/: i15_decode.hpp  i15_decred.hpp  i31_decode.hpp
include/bearssl/impl/ssl/: prf_md5sha1.hpp  ssl_hs_server.hpp  ssl_rec_cbc.hpp  ssl_rec_chapol.hpp
include/bearssl/impl/symcipher/: aes_big_cbcenc.hpp  aes_big_enc.hpp  aes_ct64_cbcenc.hpp  aes_ct_cbcenc.hpp  aes_small_dec.hpp  aes_small_enc.hpp  des_ct.hpp  des_ct_cbcdec.hpp  des_ct_cbcenc.hpp  des_tab_cbcdec.hpp
include/bearssl/impl/x509/: skey_decoder.hpp
scripts/: add-gh-auth  gh-pages
test/: base64.cpp  wasm_boost_test.hpp
xxhr/: .api.hpp.swp  api.hpp  apisync.hpp  auth.hpp  bearer.hpp  body.hpp  cookies.hpp  defines.hpp  digest.hpp  download.hpp  error.hpp  handler.hpp  low_speed.hpp  max_redirects.hpp  multipart.hpp  parameters.hpp  payload.hpp  proxies.hpp  proxyauth.hpp  response.hpp  session.hpp  sync.hpp  timeout.hpp  util.hpp  xxhr.hpp  xxhrtypes.hpp
xxhr/impl/: session-beast.hpp  session-curl.hpp  session-emscripten.hpp  session.hpp
